# Agentic-SoC-Planner-Executor-

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: kerberos_alert.json
src/agentic_soc_planner_executor/: __init__.py  api.py  config.py  executor.py  knowledge_store.py  models.py  orchestrator.py  perception.py  planner.py
src/agentic_soc_planner_executor/execution/: __init__.py  connectors.py  guardrails.py
src/agentic_soc_planner_executor/planning/: __init__.py  nce.py  playbooks.py  rsem.py  sse.py
tests/: test_pipeline.py  test_scoring.py
