[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentic-soc-planner-executor"
version = "0.1.0"
description = "Production-ready planner/executor backend component for Agentic SOC automation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentic SOC Team" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
agentic-soc-api = "agentic_soc_planner_executor.api:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_soc_planner_executor"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
